Update portfolio metadata and images; change profile image format and enhance SEO tags

--- a/index.html
+++ b/index.html
@@ -5,19 +5,37 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Abdul Mannan - JavaScript Software Developer | London</title>
+	<title>Abdul Mannan - Senior Frontend Engineer | React & TypeScript Specialist</title>
 	<meta name="description"
-		content="Portfolio of Abdul Mannan, a dedicated JavaScript Developer based in London. Discover my projects, skills, and professional journey." />
+		content="Portfolio of Abdul Mannan, a Senior Frontend Engineer with 7+ years of experience building scalable React applications. Specialist in fintech, greenfield development, and modern web technologies. Based in Pakistan, available for remote work worldwide." />
+
+	<!-- SEO Keywords -->
+	<meta name="keywords"
+		content="Abdul Mannan, Senior Frontend Engineer, React Developer, TypeScript, Next.js, Fintech Developer, Component Libraries, Remote Developer, Pakistan, Frontend Architecture" />
+	<meta name="author" content="Abdul Mannan" />
+
+	<!-- Open Graph / Social Media -->
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Abdul Mannan - Senior Frontend Engineer" />
+	<meta property="og:description"
+		content="Senior Frontend Engineer with 7+ years building scalable React applications. Specialist in fintech and greenfield development." />
+	<meta property="og:url" content="https://mani444.github.io" />
+	<meta property="og:site_name" content="Abdul Mannan Portfolio" />
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Abdul Mannan - Senior Frontend Engineer" />
+	<meta name="twitter:description"
+		content="Senior Frontend Engineer specializing in React, TypeScript, and fintech applications" />
+
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-22Y974WQCP"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-73KV1S3LD5"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag("js", new Date());
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-		gtag("config", "G-22Y974WQCP");
+		gtag('config', 'G-73KV1S3LD5');
 	</script>
 </head>
 
